@startuml

class User{
    name
    email
    password
}
class Employee{
    name
    phoneNumber
    email
    password
    employeeID
    socCode
    organizationRole
    address
}
class Administrator{
}

class Company{
  designation
}

class ParameterCategory{
    code
    name
}

User "1" - "0..1" Employee: relates to <
Employee <|-- Administrator
Administrator "1" --- "1" Employee: creates >
Company "1" -- "1..*" Employee: has >
Administrator "1" - "1" Company: works at >
Administrator "1" --- "1" ParameterCategory: creates >
Company "1" -- "*" ParameterCategory: adopts >
@enduml